tests/typing/good/testfile-bounds-9.scala

class S1 { def foo[C, B <: C, A <: B](a: A, b: B, c: C) { var x: C = a } }
object Main { def main(args: Array[String]) { } }
