tests/typing/bad/testfile-this1-1.scala
class A { }

class B {
    def m() { var x: A = this }
}
object Main { def main(args: Array[String]) { } }
